--- a/templates/index.html
+++ b/templates/index.html
@@ -47,10 +47,10 @@
         <div id="navbar" class="navbar-collapse collapse">
           <form class="navbar-form navbar-right" method="post" action=''>
             <div class="form-group">
-              <input type="text" placeholder="Email" class="form-control">
+              <input type="text" placeholder="Email" class="form-control" id="email" name="email">
             </div>
             <div class="form-group">
-              <input type="password" placeholder="Password" class="form-control">
+              <input type="password" placeholder="Password" class="form-control" id="password" name="password">
             </div>
             <button type="submit" class="btn btn-success" value="Login">Login</button>
           </form>
