--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,8 +1,63 @@
 {% extends "base.html" %}
 {% block navbar_content %}
 
-<div class="navbar-form navbar-right" method="post" action=''>
+<form class="navbar-form navbar-right" method="post" action=''>
     <button type="submit" class="btn btn-success" value="Logout" id="logout" name="logout">Logout</button>
+</form>
+
+{% endblock %}
+
+{% block body_content %}
+<!-- Main jumbotron for a primary marketing message or call to action -->
+<div class="jumbotron">
+    <div class="container">
+        <body>
+        <div id="video-jwplayer_wrapper" style="position: relative; display: block; width: 960px; height: 540px;" class="row">
+          <object type="application/x-shockwave-flash" data="{{url_for('static',filename='jwplayer.flash.swf')}}" width="100%" height="100%" bgcolor="#000000" id="video-jwplayer" name="video-jwplayer" tabindex="0">
+            <param name="allowfullscreen" value="true">
+            <param name="allowscriptaccess" value="always">
+            <param name="seamlesstabbing" value="true">
+            <param name="wmode" value="opaque">
+          </object>
+          <div id="video-jwplayer_aspect" style="display: none;"></div>
+          <div id="video-jwplayer_jwpsrv" style="position: absolute; top: 10px; z-index: 10;"></div>
+        </div>
+
+        <script type="text/javascript">
+        jwplayer('video-jwplayer').setup({
+          flashplayer:"{{url_for('static',filename='jwplayer.flash.swf')}}"
+          , file:"rtmp://" + window.location.hostname + "/flvplayback/flv:myStream.flv"
+          , autoStart: true
+          , rtmp:{
+            bufferlength:0.1
+          }
+          , deliveryType: "streaming"
+          , width: 960
+          , height: 540
+          , player: {
+            modes: {
+              linear: {
+                controls:{
+                  stream:{
+                    manage:false
+                    , enabled: false
+                  }
+                }
+              }
+            }
+          }
+          , shows: {
+            streamTimer: {
+              enabled: true
+              , tickRate: 100
+            }
+          }
+        });
+        </script>
+        </body>
+    </div>
 </div>
 
 {% endblock %}
+
+<script src="{{url_for('static',filename='jwplayer.js')}}"></script>
