Refact logout method and added a menu in the head of the homepage

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,9 +1,16 @@
 {% extends "base.html" %}
 {% block navbar_content %}
 
-<form class="navbar-form navbar-right" method="post" action=''>
-    <button type="submit" class="btn btn-success" value="Logout" id="logout" name="logout">Logout</button>
-</form>
+<div class="navbar-form navbar-right" method="post" action=''>
+    <div class="dropdown">
+      <button class="dropbtn">Menu &darr;</button>
+      <div class="dropdown-content">
+        <a href="#">Save &rarr;</a>
+        <a href="#">Historic &rarr;</a>
+      </div>
+    </div>
+    <a class="btn btn-success" href="/logout">Logout</a>
+</div>
 
 {% endblock %}
 
