--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,6 +14,8 @@
     <!-- Bootstrap core CSS -->
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
 
+    <link href="../static/css/bootstrap.css" rel="stylesheet">
+
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <link href="../static/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
 
@@ -53,7 +55,7 @@
 
     {% block body_content %}{% endblock %}
       <footer>
-        <p>&copy; 2015 Company, Inc.</p>
+        <p>&copy; 2016 All Rights Reserved.</p>
       </footer>
     </div> <!-- /container -->
 
