--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,4 +1,14 @@
 {% extends "base.html" %}
+
+{% block extra_scripts %}
+
+<script type="text/javascript" src="../static/canvasjs-1/canvasjs.min.js">
+</script>
+{% include "partials/_graph1.html" %}
+
+{% endblock %}
+
+
 {% block navbar_content %}
 
 <div class="navbar-form navbar-right" method="post" action=''>
@@ -18,50 +28,42 @@
 <!-- Main jumbotron for a primary marketing message or call to action -->
 <div class="jumbotron">
     <div class="container">
-        <body>
-        <div id="video-jwplayer_wrapper" style="position: relative; display: block; width: 960px; height: 540px;" class="row">
-          <object type="application/x-shockwave-flash" data="{{url_for('static',filename='jwplayer.flash.swf')}}" width="100%" height="100%" bgcolor="#000000" id="video-jwplayer" name="video-jwplayer" tabindex="0">
-            <param name="allowfullscreen" value="true">
-            <param name="allowscriptaccess" value="always">
-            <param name="seamlesstabbing" value="true">
-            <param name="wmode" value="opaque">
-          </object>
-          <div id="video-jwplayer_aspect" style="display: none;"></div>
-          <div id="video-jwplayer_jwpsrv" style="position: absolute; top: 10px; z-index: 10;"></div>
+        <div class="row">
+            <div class="col-md-4">
+                {% include "partials/_jwplayer.html" %}
+            </div>
+            <div class="col-md-4">
+                {% include "partials/_control.html" %}
+            </div>
+            <div class="col-md-4">
+                <div id="velocity_time" style="height: 180px; width: 100%;">
+                </div>
+            </div>
         </div>
-
-        <script type="text/javascript">
-        jwplayer('video-jwplayer').setup({
-          flashplayer:"{{url_for('static',filename='jwplayer.flash.swf')}}"
-          , file:"rtmp://" + window.location.hostname + "/flvplayback/flv:myStream.flv"
-          , autoStart: true
-          , rtmp:{
-            bufferlength:0.1
-          }
-          , deliveryType: "streaming"
-          , width: 960
-          , height: 540
-          , player: {
-            modes: {
-              linear: {
-                controls:{
-                  stream:{
-                    manage:false
-                    , enabled: false
-                  }
-                }
-              }
-            }
-          }
-          , shows: {
-            streamTimer: {
-              enabled: true
-              , tickRate: 100
-            }
-          }
-        });
-        </script>
-        </body>
+        <br>
+        <div class="row">
+            <div class="col-md-4">
+                {% include "partials/_table.html" %}
+            </div>
+            <div class="col-md-4">
+                {# Nothing in this column #}
+            </div>
+            <div class="col-md-4">
+                <div id="temperature_time" style="height: 180px; width: 100%;">
+                </div>
+            </div>
+        </div>
+        <br>
+        <div class"row">
+            <div class="col-md-4">
+            </div>
+            <div class="col-md-4">
+            </div>
+            <div class="col-md-4">
+                <div id="velocity_temperature" style="height: 180px; width: 100%;">
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
