--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -54,7 +54,7 @@
     </nav>
 
     {% block body_content %}{% endblock %}
-      <footer>
+      <footer class="footerr">
         <p>&copy; 2016 All Rights Reserved.</p>
       </footer>
     </div> <!-- /container -->
