--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -32,11 +32,11 @@
             <div class="col-md-4">
                 {% include "partials/_jwplayer.html" %}
             </div>
-            <div class="col-md-4">
+            <div class="col-md-3" id="center-control">
                 {% include "partials/_control.html" %}
             </div>
-            <div class="col-md-4">
-                <div id="velocity_time" style="height: 180px; width: 100%;">
+            <div class="col-md-3">
+                <div id="velocity_time" class="format-grafic-one">
                 </div>
             </div>
         </div>
@@ -45,11 +45,11 @@
             <div class="col-md-4">
                 {% include "partials/_table.html" %}
             </div>
-            <div class="col-md-4">
+            <div class="col-md-3" id="center-control">
                 {# Nothing in this column #}
             </div>
             <div class="col-md-4">
-                <div id="temperature_time" style="height: 180px; width: 100%;">
+                <div id="temperature_time" class="format-grafic-two">
                 </div>
             </div>
         </div>
@@ -57,10 +57,10 @@
         <div class"row">
             <div class="col-md-4">
             </div>
-            <div class="col-md-4">
+            <div class="col-md-3" id="center-control">
             </div>
             <div class="col-md-4">
-                <div id="velocity_temperature" style="height: 180px; width: 100%;">
+                <div id="velocity_temperature" class="format-grafic-three">
                 </div>
             </div>
         </div>
