--- a/app/templates/partials/_control.html
+++ b/app/templates/partials/_control.html
@@ -1,8 +1,8 @@
 <div>
     <br>
     <form role="init_test">
-        <div class="form-group">
-            <label>Escolha a velocidade </label>
+        <div class="form-group" id="vcontainer-item">
+            <label>Escolha a velocidade:</label>
             <select class="form-control" id="velocity">
                 <option>20 Km/h</option>
                 <option>30 Km/h</option>
@@ -13,8 +13,8 @@
                 <option>80 Km/h</option>
             </select>
         </div>
-        <button type="submit" class="btn btn-default">Iniciar Teste</button>
+        <button type="submit" class="btn btn-default" id="button-control">Iniciar Teste</button>
     </form>
     <br>
-    <button class="btn btn-warning">Acionar freio</button>
+    <button class="btn btn-warning" id="button-control-one">Acionar freio</button>
 </div>
