--- a/app/templates/partials/_table.html
+++ b/app/templates/partials/_table.html
@@ -2,27 +2,33 @@
     <tbody>
         <tr>
             <td>Temperatura Ambiente</td>
-            <td>30 graus C</td>
+            <td>30</td>
+            <td>˚C</td>
         </tr>
         <tr>
             <td>Temperatura do Disco</td>
-            <td>70 graus C</td>
+            <td>70</td>
+            <td>˚C</td>
         </tr>
         <tr>
             <td>Temperatura da Pinça</td>
-            <td>80 graus C</td>
+            <td>80</td>
+            <td>˚C</td>
         </tr>
         <tr>
             <td>Velocidade</td>
-            <td>60 Km/h</td>
+            <td>60</td>
+            <td>Km/h</td>
         </tr>
         <tr>
             <td>Pressão sobre o disco</td>
-            <td>90 bar</td>
+            <td>90</td>
+            <td>bar</td>
         </tr>
         <tr>
             <td>Força de atrito</td>
-            <td>90 N</td>
+            <td>90</td>
+            <td>N</td>
         </tr>
     </tbody>
 </table>
