--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -18,14 +18,17 @@
 <!-- Main jumbotron for a primary marketing message or call to action -->
 <div class="jumbotron">
     <div class="container">
-        <h1>Hello, world!</h1>
-        <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+        <h1>Brake Control Workbench</h1>
+        <p>Este sistema tem por objetivo obter o feedback da bancada e o controle da bancada de teste em tempo real.</p>
+        <p><a class="btn btn-primary btn-lg" href="#" role="button">Leia mais &raquo;</a></p>
     </div>
 </div>
 
+<!--<img src="/app/images/workbench.png" alt="Workbench" style="width:750px;height:450px;">
+
+<!--
 <div class="container">
-    <!-- Example row of columns -->
+    <!-- Example row of columns
     <div class="row">
         <div class="col-md-4">
             <h2>Heading</h2>
@@ -43,5 +46,6 @@
         <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
     </div>
  </div>
+-->
 
 {% endblock %}
