--- a/app/templates/partials/_table.html
+++ b/app/templates/partials/_table.html
@@ -2,32 +2,32 @@
     <tbody>
         <tr>
             <td>Temperatura Ambiente</td>
-            <td>30</td>
+            <td id="temp_env"></td>
             <td>˚C</td>
         </tr>
         <tr>
             <td>Temperatura do Disco</td>
-            <td>70</td>
+            <td id="temp_disc"></td>
             <td>˚C</td>
         </tr>
         <tr>
             <td>Temperatura da Pinça</td>
-            <td>80</td>
+            <td id="temp_grip"></td>
             <td>˚C</td>
         </tr>
         <tr>
             <td>Velocidade</td>
-            <td>60</td>
+            <td id="vel"></td>
             <td>Km/h</td>
         </tr>
         <tr>
             <td>Pressão sobre o disco</td>
-            <td>90</td>
+            <td id="pressure"></td>
             <td>bar</td>
         </tr>
         <tr>
             <td>Força de atrito</td>
-            <td>90</td>
+            <td id="friction"></td>
             <td>N</td>
         </tr>
     </tbody>
