--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -69,4 +69,6 @@
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
   </body>
+
+  {% block extra_end_scripts %}{% endblock %}
 </html>
