--- a/app/templates/partials/_graph1.html
+++ b/app/templates/partials/_graph1.html
@@ -1,110 +1,92 @@
 <script type="text/javascript">
     window.onload = function () {
 
-        var vel_time_dps = []; // Datapoints
-        var temp_time_dps = []; // Datapoints
-        var vel_temp_dps = []; // Datapoints
+        var vel_dps = []; // Datapoints
+        var temp_disc_dps = []; // Datapoints
+        var temp_grip_dps = []; // Datapoints
 
-        var chart1 = new CanvasJS.Chart("velocity_time", {
-            title: {
-                text: "Velocidade X Tempo"
-            },
-            data: [{
-                type: "spline",
-                dataPoints: vel_time_dps
-            }]
-        });
-
-        var chart2 = new CanvasJS.Chart("temperature_time", {
-            title: {
-                text: "Temperatura X Tempo"
-            },
-            data: [{
-                type: "spline",
-                dataPoints: temp_time_dps
-            }]
-        });
-
-        var chart3 = new CanvasJS.Chart("velocity_temperature", {
-            title: {
-                text: "Velocidade X Temperatura"
-            },
-            data: [{
-                type: "spline",
-                dataPoints: vel_temp_dps
-            }]
-        });
+        function createChart(div_id, _title, _type, dps) {
+            var chart = new CanvasJS.Chart(div_id, {
+                title: {
+                    text: _title
+                },
+                data: [{
+                    type: _type,
+                    dataPoints: dps
+                }]
+            });
+            return chart
+        }
+        var chart1 = createChart("velocity_time", "Velocidade X Tempo", "spline", vel_dps);
+        var chart2 = createChart("temperature_time", "Temperatura(Disco) X Tempo", "spline", temp_disc_dps);
+        var chart3 = createChart("temperature_grip", "Temperatura(Pinça) X Tempo", "spline", temp_grip_dps);
 
         var xVal = 0;
-        var yVal = 100;
+        var tempDisc = 10;
+        var tempGrip = 10;
+        var velDisc = 0;
+        var tempEnv = 30;
+        var pressure = 0;
+        var friction = 4;
         var updateInterval = 100;
-        var dataLength = 200; // num of datapoints visible at any point
+        var dataLength = 500; // num of datapoints visible at any point
 
-        var updateChart1 = function (count) {
+        var updateChart = function (count) {
             count = count || 1;
             // count is number of times loop runs to generate random datapoints
 
             for (var j = 0; j < count; j++) {
-                yVal = yVal + Math.round(5 + Math.random() *(-5-5));
-                vel_time_dps.push({
+                tempDisc = tempDisc + Math.round(5 + Math.random() *(-5-5));
+                tempGrip = tempGrip + Math.round(5 + Math.random() *(-5-5));
+                velDisc = velDisc + Math.round(5 + Math.random() *(-5-5));
+                // Don't need a chart
+                tempEnv = tempEnv + Math.round(5 + Math.random() *(-5-5));
+                pressure = pressure + Math.round(5 + Math.random() *(-5-5));
+                friction = friction + Math.round(5 + Math.random() *(-5-5));
+
+                $("#temp_disc").html(tempDisc);
+                $("#temp_grip").html(tempGrip);
+                $("#vel").html(velDisc);
+                $("#temp_env").html(tempEnv);
+                $("#pressure").html(pressure);
+                $("#friction").html(friction);
+
+                vel_dps.push({
                     x: xVal,
-                    y: yVal
+                    y: velDisc
+                });
+                temp_disc_dps.push({
+                    x: xVal,
+                    y: tempDisc
+                });
+                temp_grip_dps.push({
+                    x: xVal,
+                    y: tempGrip
                 });
                 xVal++;
             };
-            if (vel_time_dps.length > dataLength)
+            if (vel_dps.length > dataLength)
             {
-                vel_time_dps.shift();
+                vel_dps.shift();
             }
+            if (temp_disc_dps.length > dataLength)
+            {
+                temp_disc_dps.shift();
+            }
+            if (temp_grip_dps.length > dataLength)
+            {
+                temp_grip_dps.shift();
+            }
+
             chart1.render();
-        };
-
-        var updateChart2 = function (count) {
-            count = count || 1;
-            // count is number of times loop runs to generate random datapoints
-
-            for (var j = 0; j < count; j++) {
-                yVal = yVal + Math.round(5 + Math.random() *(-5-5));
-                temp_time_dps.push({
-                    x: xVal,
-                    y: yVal
-                });
-                xVal++;
-            };
-            if (temp_time_dps.length > dataLength)
-            {
-                temp_time_dps.shift();
-            }
             chart2.render();
-        };
-
-        var updateChart3 = function (count) {
-            count = count || 1;
-            // count is number of times loop runs to generate random datapoints
-
-            for (var j = 0; j < count; j++) {
-                yVal = yVal + Math.round(5 + Math.random() *(-5-5));
-                vel_temp_dps.push({
-                    x: xVal,
-                    y: yVal
-                });
-                xVal++;
-            };
-            if (vel_temp_dps.length > dataLength)
-            {
-                vel_temp_dps.shift();
-            }
             chart3.render();
         };
 
         // generates first set of dp
-        updateChart1(dataLength);
-        updateChart2(dataLength);
-        updateChart3(dataLength);
+        updateChart(dataLength);
 
         // update chart after specified time
-        setInterval(function(){ updateChart1() }, updateInterval);
-        setInterval(function(){ updateChart2() }, updateInterval);
-        setInterval(function(){ updateChart3() }, updateInterval);
+        setInterval(function(){ updateChart() }, updateInterval);
     }
 </script>
