Signed-off-by: carlosTJunior <carlosjunior117@hotmail.com> Signed-off-by: ruyther <ruy_fusion@hotmail.com> Signed-off-by: Caique <caiquepereira@gmail.com> Signed-off-by: Davi Gusmao <davi.b.gusmao@gmail.com>
Celery and AJAX working together

--- a/app/templates/partials/_control.html
+++ b/app/templates/partials/_control.html
@@ -13,4 +13,5 @@
     </form>
     <br>
     <button class="btn btn-warning" id="button-control-one">Acionar freio</button>
+    <div id="teste"></div>
 </div>
