--- a/app/templates/modules/_control.html
+++ b/app/templates/modules/_control.html
@@ -9,9 +9,8 @@
                 <option>80 Km/h</option>
             </select>
         </div>
-        <button type="submit" class="btn btn-default" id="button-control" value="Start Test">Iniciar Teste</button>
     </form>
     <br>
+    <button class="btn btn-default" id="button-control">Iniciar Teste</button>
     <button class="btn btn-warning" id="button-control-one">Acionar freio</button>
-    <div id="teste"></div>
 </div>
