--- a/app/static/css/bootstrap.css
+++ b/app/static/css/bootstrap.css
@@ -60,12 +60,13 @@
 }
 
 #button-control {
-  margin-top: 20px;
+  margin-top: 10px;
   margin-left: 8%;
 }
 
 #button-control-one {
-  margin-left: 7%;
+  margin-top: 10px;
+  margin-left: 20px;
 }
 
 #center-control {
