--- a/app/templates/modules/_base.html
+++ b/app/templates/modules/_base.html
@@ -65,16 +65,16 @@
                 });
                 xVal++;
             };
-            if (vel_dps.length > dataLength)
-            {
+
+            if (vel_dps.length > dataLength) {
                 vel_dps.shift();
             }
-            if (temp_disc_dps.length > dataLength)
-            {
+
+            if (temp_disc_dps.length > dataLength) {
                 temp_disc_dps.shift();
             }
-            if (temp_grip_dps.length > dataLength)
-            {
+
+            if (temp_grip_dps.length > dataLength) {
                 temp_grip_dps.shift();
             }
 
@@ -89,37 +89,6 @@
         // update chart after specified time
         setInterval(function(){ updateChart() }, updateInterval);
 
-        function start_task() {
-            $.ajax({
-                type: 'POST',
-                url: '/update_control_painel',
-                success: function(data, status, request) {
-                    status_url = request.getResponseHeader('Location');
-                    update_progress(status_url)
-                },
-                error: function() {
-                    alert('Unexpected error');
-                }
-            });
-        }
-
-        function update_progress(status_url) {
-            $.getJSON(status_url, function(data) {
-                if (data['state'] == 'PROGRESS') {
-                    tempDisc = data['dsc_temp'];
-                    tempGrip = data['pin_temp'];
-                    velDisc = data['speed'];
-                    tempEnv = data['env_temp'];
-                    pressure = data['pressure'];
-                    friction = data['friction'];
-                    $("#teste").html(friction + '<br>' + tempDisc + '<br>' + velDisc);
-                }
-                setTimeout( function() {
-                    update_progress(status_url);
-                }, 500);
-            });
-        }
-
-        $("#button-control-one").click(start_task);
+        {% include "modules/_celery.html" %}
     }
 </script>
