--- a/app/templates/modules/_base.html
+++ b/app/templates/modules/_base.html
@@ -88,6 +88,7 @@
         setInterval(function(){ updateChart() }, updateInterval);
 
         function start_task() {
+            $('#button-control').attr('disabled','disabled');
             console.log("Start task requisition");
             $.ajax({
                 type: 'POST',
@@ -122,12 +123,14 @@
 
 
         function send_brake_requisition() {
+            $('#button-control-two').attr('disabled','disabled');
             console.log("sending brake requisition");
             $.ajax({
                 type: 'POST',
                 url: '/brake',
                 success: function(response) {
                     console.log(response)
+                    $('#button-control-two').removeAttr('disabled');
                 },
                 error: function(error) {
                     console.log(error)
@@ -137,6 +140,7 @@
         }
 
         function stop_test_requisition() {
+            $('#button-control').removeAttr('disabled');
             console.log("sending stop requisition");
             $.ajax({
                 type: 'POST',
