--- a/app/static/css/bootstrap.css
+++ b/app/static/css/bootstrap.css
@@ -59,16 +59,6 @@
    display: table-cell;
 }
 
-#button-control {
-  margin-top: 10px;
-  margin-left: 8%;
-}
-
-#button-control-one {
-  margin-top: 10px;
-  margin-left: 20px;
-}
-
 #center-control {
   margin-left: 7%;
   margin-top: 6%;
@@ -4196,11 +4186,15 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 .nav-stacked > li {
   float: none;
+  text-align: center;
 }
-.nav-stacked > li + li {
+
+/*.nav-stacked > li + li {
   margin-top: 2px;
   margin-left: 0;
-}
+  text-align: center;
+}*/
+
 .nav-justified {
   width: 100%;
 }
