Taking off travis and refactor the home screen

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -12,14 +12,8 @@
 {% block navbar_content %}
 
 <div class="navbar-form navbar-right" method="post" action=''>
-    <div class="dropdown">
-      <button class="dropbtn">Menu &darr;</button>
-      <div class="dropdown-content">
-        <a href="#">Save &rarr;</a>
-        <a href="#">Historic &rarr;</a>
-      </div>
-    </div>
-    <a class="btn btn-success" href="/logout">Logout</a>
+  <a class="btn btn-info" href="">Salvar</a>
+  <a class="btn btn-success" href="/logout">Sair</a>
 </div>
 
 {% endblock %}
