--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -19,7 +19,7 @@
 <div class="jumbotron">
     <div class="container">
         <h1>Brake Control Workbench</h1>
-        <p>Este sistema tem por objetivo obter o feedback da bancada e o controle da bancada de teste em tempo real.</p>
+        <p>Este sistema tem por objetivo obter o feedback e o controle da bancada de teste para simulação térmica em disco de freio em tempo real.</p>
         <p><a class="btn btn-primary btn-lg" href="#" role="button">Leia mais &raquo;</a></p>
     </div>
 </div>
