--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -16,7 +16,7 @@
 
     <link href="../static/css/bootstrap.css" rel="stylesheet">
 
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug 
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug
     <link href="../static/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
     -->
     <!-- Custom styles for this template -->
@@ -40,10 +40,8 @@
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
+            <a class="btn btn-info" href="">Salvar</a>
+            <a class="btn btn-success" href="/logout">Sair</a>
           </button>
           <a class="navbar-brand" href="#">BConW</a>
         </div>
@@ -65,10 +63,10 @@
     <!-- Placed at the end of the document so the pages load faster
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-    <script src="../../dist/js/bootstrap.min.js"></script> 
+    <script src="../../dist/js/bootstrap.min.js"></script>
     -->
 
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug 
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug
     <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
     -->
   </body>
