--- a/app/templates/modules/_control.html
+++ b/app/templates/modules/_control.html
@@ -37,10 +37,10 @@
                 <button class="btn btn-success" id="button-control">Iniciar Teste</button>
             </li>
             <li>
-                <button class="btn btn-danger" id="button-control-one">Acionar freio</button>
+                <button class="btn btn-danger" id="button-control-one">Acionar Freio</button>
             </li>
             <li>
-                <button class="btn btn-warning" id="button-control-two">Parar teste</button>
+                <button class="btn btn-warning" id="button-control-two">Parar Teste</button>
             </li>
         </ul>
     </div>
