--- a/app/templates/modules/_table.html
+++ b/app/templates/modules/_table.html
@@ -21,12 +21,12 @@
             <td>Km/h</td>
         </tr>
         <tr>
-            <td>Pressão sobre o disco</td>
+            <td>Pressão sobre o Disco</td>
             <td id="pressure"></td>
             <td>bar</td>
         </tr>
         <tr>
-            <td>Força de atrito</td>
+            <td>Força de Atrito</td>
             <td id="friction"></td>
             <td>N</td>
         </tr>
