--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -53,7 +53,7 @@
 
     {% block body_content %}{% endblock %}
       <footer class="footerr">
-        <p>&copy; 2016 All Rights Reserved.</p>
+        <p>&copy; 2016 Todos os Direitos Reservados.</p>
       </footer>
     </div> <!-- /container -->
 
