--- a/app/templates/modules/_base.html
+++ b/app/templates/modules/_base.html
@@ -149,7 +149,13 @@
                     alert('Unexpected error');
                 }
             });
-        }
+            tempDisc = 0;
+            tempGrip = 0;
+            velDisc = 0;
+            tempEnv = 0;
+            pressure = 0;
+            friction = 0;
+       }
 
     }
 </script>
