--- a/app/templates/modules/_table.html
+++ b/app/templates/modules/_table.html
@@ -23,7 +23,7 @@
         <tr>
             <td>Pressão sobre o disco</td>
             <td id="pressure"></td>
-            <td>bar</td>
+            <td>KPa</td>
         </tr>
         <tr>
             <td>Força de atrito</td>
