--- a/app/templates/modules/_base.html
+++ b/app/templates/modules/_base.html
@@ -108,11 +108,11 @@
                 if (data['state'] == 'PROGRESS' || data['state'] == 'PENDING') {
                     tempDisc = data['dsc_temp'];
                     tempGrip = data['pin_temp'];
-                    velDisc = data['speed'];
+                    velDisc = parseInt(data['speed']);
                     velDisc.toFixed(2);
                     tempEnv = data['env_temp'];
                     pressure = data['pressure'];
-                    friction = data['friction'];
+                    friction = parseInt(data['friction']);
                     friction.toFixed(2);
 
                     setTimeout( function() {
